--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "nomplate-router",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "Middleware for building rich client applications, especially with Nomplate ",
   "main": "index.js",
   "directories": {
@@ -28,18 +28,16 @@
   "homepage": "https://github.com/lukebayes/nomplate-router#readme",
   "devDependencies": {
     "chai": "^4.2.0",
-    "eslint": "^6.8.0",
+    "esbuild": "^0.13.15",
+    "eslint": "^8.3.0",
     "eslint-plugin-mocha": "^6.3.0",
     "express": "^4.17.1",
     "js-beautify": "^1.13.0",
     "jsdom": "^16.4.0",
     "jsdom-simulant": "^1.1.2",
     "json-loader": "^0.5.7",
-    "mocha": "^7.2.0",
+    "mocha": "^9.1.3",
     "nomplate": "^1.3.4",
-    "sinon": "^9.2.1",
-    "terser-webpack-plugin": "^5.0.3",
-    "webpack": "^5.4.0",
-    "webpack-cli": "^3.3.12"
+    "sinon": "^9.2.1"
   }
 }
